--- a/config/training_params.yaml
+++ b/config/training_params.yaml
@@ -1,21 +1,14 @@
 training:
   epochs: 10
-  batch_size: 2
-  amp: true
-  use_scaler: true
+  batch_size: 4
+  amp: True
 
 optimizer:
-  type: "Adam"
-  lr: 0.0001
-  weight_decay: 0.00001
+  type: Adam
+  lr: 0.0002
+  weight_decay: 1e-5
 
-scheduler:
-  enabled: false
-  type: "StepLR"
-  step_size: 30
-  gamma: 0.1
-
-augmentation:
-  phase_inversion_prob: 0.1
-  phase_shift_prob: 0.1
-  noise_level: 0.01
+loss:
+  instrumental_weight: 0.8
+  vocal_rejection_weight: 0.2
+  spectral_weight: 0.3
